--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aenum==2.2.3
+appdirs==1.4.4
 attrs==19.3.0
 beautifulsoup4==4.9.0
 bs4==0.0.1
@@ -7,14 +8,18 @@ cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
 cryptography==2.9.2
+distlib==0.3.0
+filelock==3.0.12
 Flask==0.12.2
 future==0.18.2
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
 librus-tricks==0.8.1
 MarkupSafe==1.1.1
 mysql-connector==2.2.9
+pipenv==2018.11.26
 pycparser==2.20
 pymessenger==0.0.7.0
 pyOpenSSL==19.1.0
@@ -29,6 +34,7 @@ soupsieve==2.0
 SQLAlchemy==1.3.17
 uonet-request-signer==1.0.0
 urllib3==1.25.9
+virtualenv==20.0.21
+virtualenv-clone==0.5.4
 vulcan-api==1.1.0
 Werkzeug==1.0.1
-gunicorn==20.0.4
